Fixed the issue on Safari. The button on the homepage was displaying as block.

--- a/development/scss/scss-panels-dev/_video-hero.scss
+++ b/development/scss/scss-panels-dev/_video-hero.scss
@@ -295,7 +295,8 @@ button.slick-arrow.slick-next.bounce:hover {
 
 .video-control,
 .grid-item button.video-control,
-button#playPauseButton {
+button#playPauseButton,
+#playPauseButton {
     position: absolute;
     aspect-ratio: 1 / 1;
     bottom: 0;
